--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/cairo": "^0.4.1",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.1.0",
     "@google/generative-ai": "^0.3.1",
@@ -24,6 +25,7 @@
     "expo-haptics": "~14.1.3",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
+    "expo-print": "^14.1.4",
     "expo-router": "~5.0.2",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.30.6",
