--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "EXPO_NO_TELEMETRY=1 expo start",
+    "dev": "cross-env EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
     "lint": "expo lint"
   },
@@ -19,14 +19,14 @@
     "@react-navigation/native": "^7.0.14",
     "expo": "^53.0.0",
     "expo-blur": "~14.1.3",
-    "expo-camera": "~16.1.5",
+    "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.3",
     "expo-font": "~13.2.2",
     "expo-haptics": "~14.1.3",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
     "expo-print": "^14.1.4",
-    "expo-router": "~5.0.2",
+    "expo-router": "~5.1.0",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.30.6",
     "expo-status-bar": "~2.2.2",
