--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,46 +1,60 @@
 name: Deploy Expo Web to GitHub Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-      - main # أو اسم الفرع الرئيسي لديك
+    branches: ["main"]
 
-# -->> أضف هذا القسم بالكامل <<--
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
-# -->> نهاية القسم المضاف <<--
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  # Build job
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18' # يمكنك استخدام 16 أو 18
-          cache: 'npm'
-
+          node-version: "18"
+          cache: "npm"
       - name: Install dependencies
         run: npm install
-
-      - name: Configure app.json for deployment
-        # هذا السطر مهم جداً
+      - name: Configure baseUrl in app.json
         run: |
-          sed -i 's|\("web": {\)|\1 "baseUrl": "/qarari/",|' app.json
-
-      - name: Build web application
+          # This script checks if baseUrl is already present and adds it if not.
+          if ! grep -q '"baseUrl": "/qarari/"' app.json; then
+            sed -i 's|\("web": {\)|\1\n        "baseUrl": "/qarari/",|' app.json
+          fi
+      - name: Build
         run: npx expo export
-
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: 'dist' # المجلد الذي يحتوي على موقعك
+          path: ./dist
 
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v4
