--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,59 +1,55 @@
 name: Deploy Expo Web to GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [main]
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Node.js
+
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
-          cache: "npm"
+          node-version: 18
+          cache: 'npm'
+
       - name: Install dependencies
-        run: npm install
-      - name: Configure baseUrl in app.json
+        run: npm ci
+
+      - name: Ensure baseUrl in app.json
         run: |
-          # This script checks if baseUrl is already present and adds it if not.
           if ! grep -q '"baseUrl": "/qarari/"' app.json; then
-            sed -i 's|\("web": {\)|\1\n        "baseUrl": "/qarari/",|' app.json
+            sed -i 's|"web": {|&\n    "baseUrl": "/qarari/",|' app.json
           fi
-      - name: Build
-        run: npx expo export
+
+      - name: Build Expo web
+        run: npx expo export --platform web
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: dist
 
-  # Deployment job
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
