--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,55 +1,53 @@
-name: Deploy Expo Web to GitHub Pages
+name: Deploy Website to GitHub Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches: [main]
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
+  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: 'npm'
-
+          node-version: "18"
+          cache: "npm"
       - name: Install dependencies
-        run: npm ci
-
-      - name: Ensure baseUrl in app.json
-        run: |
-          if ! grep -q '"baseUrl": "/qarari/"' app.json; then
-            sed -i 's|"web": {|&\n    "baseUrl": "/qarari/",|' app.json
-          fi
-
-      - name: Build Expo web
-        run: npx expo export --platform web
-
+        run: npm install
+      - name: Build
+        # This command assumes app.json already has "baseUrl": "/qarari/"
+        run: npx expo export
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: ./dist
 
+  # Deployment job
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
