--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "cross-env": "^7.0.3",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.3"
   }
 }
