Edit the table, format it, and change its direction from right to left.

--- a/app.json
+++ b/app.json
@@ -17,9 +17,12 @@
       "favicon": "./assets/images/favicon.png",
       "baseUrl": "/qarari/"
     },
-
-    
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser",
+      "expo-secure-store"
+    ],
     "experiments": {
       "typedRoutes": true
     }
