Set Dark Mode as default when launching the app and turn off automatic translation

--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png",
-      "baseUrl": "/qarari/"
+      "baseUrl": "/qarari/",
+      "lang": "ar"
     },
     "plugins": [
       "expo-router",
