--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "PickWise",
-    "slug": "pickwise",
+    "name": "Qarari",
+    "slug": "Qarari",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
