--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pickwise-decision-app",
+  "name": "Qarari-decision-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
